# dfdatetime

./: .gitignore  .pylintrc  .travis.yml  MANIFEST.in  Pipfile  appveyor.yml  pyproject.toml  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheel.yml  lint.yml  test_docker.yml  test_docs.yml  test_macos.yml  test_tox.yml  test_windows.yml
config/appveyor/: install.ps1
config/dpkg/: changelog  control  copyright
config/travis/: install.sh  run_checks.sh  runtests.sh
dfdatetime/: __init__.py  apfs_time.py  cocoa_time.py  decorators.py  definitions.py  delphi_date_time.py  dotnet_datetime.py  factory.py  fake_time.py  fat_date_time.py  filetime.py  golang_time.py  hfs_time.py  interface.py  java_time.py  not_a_time.py  ole_automation_date.py  posix_time.py  precisions.py  rfc2579_date_time.py  semantic_time.py  serializer.py  systemtime.py  time_elements.py  uuid_time.py  webkit_time.py
docs/: conf.py
docs/sources/: Date-and-time-values.md
docs/sources/api/: dfdatetime.rst
docs/sources/user/: Installation-instructions.md
tests/: apfs_time.py  cocoa_time.py  decorators.py  delphi_date_time.py  dotnet_dateitme.py  dotnet_datetime.py  factory.py  fake_time.py  fat_date_time.py  filetime.py  golang_time.py  hfs_time.py  interface.py  java_time.py  not_a_time.py  ole_automation_date.py  posix_time.py  precisions.py  rfc2579_date_time.py  semantic_time.py  serializer.py  systemtime.py  time_elements.py  uuid_time.py  webkit_time.py
utils/: check_dependencies.py  dependencies.py  review.py  update_dependencies.py  update_release.sh
