[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfdatetime"
version = "20260526"
description = "Digital Forensics date and time (dfDateTime)"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"

[project.urls]
Documentation = "https://dfdatetime.readthedocs.io/en/latest"
Homepage = "https://github.com/log2timeline/dfdatetime"
Repository = "https://github.com/log2timeline/dfdatetime"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.docformatter]
black = true
non-cap = ["bytes:", "dfDateTime", "float:", "int:", "str:"]
non-strict = true

[tool.setuptools]
package-dir = {"dfdatetime" = "dfdatetime"}
